--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/Home.webp" alt="" /></span>
 							<h1 id="title">Akshay Sarve</h1>
 							<p>Software Test Engineer</p>
 						</div>
@@ -44,7 +44,7 @@
 							<li><a href="https://twitter.com/akshay_sarve" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://facebook.com/akshaysarveofficial" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://github.com/akshaysarve" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://akshaysarve.github.io" class="icon brands fa-dribbble"><span class="label">Website</span></a></li>
 							<li><a href="mailto:sarveakshay@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -108,9 +108,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pramogh.png" alt="Pramogh" /></a>
 										<header>
-											<h3></h3>
+											<h3>Pramogh</h3>
 										</header>
 									</article>
 								</div>
@@ -122,9 +122,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="" class="image fit"><img src="images/Clasis-law.png" alt="Clasis Law" /></a>
 										<header>
-											<h3></h3>
+											<h3>Clasis Law</h3>
 										</header>
 									</article>
 								</div>
@@ -158,7 +158,7 @@
 
 							<p>You can contact me for any project related quries.</p>
 
-							<form method="post" action="mailto:sarveakshay@gmail.com">
+							<form method="post" action="contact.php">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name*" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email*" /></div>
