--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="/images/ndtvprofit-labs-wazirx-futureofinvesting.png" alt="NDTV Profit WazirX" /></a>
+										<a href="#" class="image fit"><img src="images/ndtvprofit-labs-wazirx-futureofinvesting.png" alt="NDTV Profit WazirX"/></a>
 										<header>
 											<h3>NDTV Profit</h3>
 										</header>
@@ -102,7 +102,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/constructionworld-in.png" alt="Construction World" /></a>
+										<a href="http://constructionworld.in" class="image fit"><img src="images/constructionworld-in.png" alt="Construction World" /></a>
 										<header>
 											<h3>Construction World</h3>
 										</header>
@@ -116,17 +116,24 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Amvean.png" alt="Amvean" /></a>
+										<a href="https://amvean.com" class="image fit"><img src="images/Amvean.png" alt="Amvean" /></a>
 										<header>
 											<h3>Amvean</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="" class="image fit"><img src="images/Clasis-law.png" alt="Clasis Law" /></a>
+										<a href="https://clasislaw.com" class="image fit"><img src="images/Clasis-law.png" alt="Clasis Law" /></a>
 										<header>
 											<h3>Clasis Law</h3>
 										</header>
 									</article>
+									<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="https://rahstaexpo.com" class="image fit"><img src="images/Rahsta-expo.png" alt="Rahsta Expo" /></a>
+										<header>
+											<h3>Construction World</h3>
+										</header>
+										</article>
 								</div>
 							</div>
 
@@ -158,18 +165,23 @@
 
 							<p>You can contact me for any project related quries.</p>
 
-							<form method="post" action="contact.php">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name*" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email*" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message*"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
+							<form method="POST" action="https://formspree.io/f/xanyybkw">
+    <div class="row">
+        <div class="col-6 col-12-mobile">
+            <input type="text" name="name" placeholder="Name*" required />
+        </div>
+        <div class="col-6 col-12-mobile">
+            <input type="email" name="email" placeholder="Email*" required />
+        </div>
+        <div class="col-12">
+            <textarea name="message" placeholder="Message*" required></textarea>
+        </div>
+        <div class="col-12">
+            <input type="submit" value="Send Message" />
+        </div>
+    </div>
+</form>
+
 
 						</div>
 					</section>
