--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/ndtvprofit-labs-wazirx-futureofinvesting.png" alt="NDTV Profit WazirX"/></a>
+										<a href="https://www.ndtvprofit.com/labs/wazirx_futureofinvesting/" class="image fit"><img src="images/ndtvprofit-labs-wazirx-futureofinvesting.png" alt="NDTV Profit WazirX"/></a>
 										<header>
 											<h3>NDTV Profit</h3>
 										</header>
@@ -131,7 +131,7 @@
 									<article class="item">
 										<a href="https://rahstaexpo.com" class="image fit"><img src="images/Rahsta-expo.png" alt="Rahsta Expo" /></a>
 										<header>
-											<h3>Construction World</h3>
+											<h3>RahstaExpo 2024</h3>
 										</header>
 										</article>
 								</div>
@@ -155,6 +155,7 @@
 						</div>
 					</section>
 
+
 				<!-- Contact -->
 					<section id="contact" class="four">
 						<div class="container">
@@ -166,22 +167,21 @@
 							<p>You can contact me for any project related quries.</p>
 
 							<form method="POST" action="https://formspree.io/f/xanyybkw">
-    <div class="row">
-        <div class="col-6 col-12-mobile">
-            <input type="text" name="name" placeholder="Name*" required />
-        </div>
-        <div class="col-6 col-12-mobile">
-            <input type="email" name="email" placeholder="Email*" required />
-        </div>
-        <div class="col-12">
-            <textarea name="message" placeholder="Message*" required></textarea>
-        </div>
-        <div class="col-12">
+                           <div class="row">
+                        <div class="col-6 col-12-mobile">
+                         <input type="text" name="name" placeholder="Name*" required />
+                      </div>
+                       <div class="col-6 col-12-mobile">
+                       <input type="email" name="email" placeholder="Email*" required />
+                    </div>
+                 <div class="col-12">
+                <textarea name="message" placeholder="Message*" required></textarea>
+               </div>
+           <div class="col-12">
             <input type="submit" value="Send Message" />
-        </div>
-    </div>
-</form>
-
+          </div>
+         </div>
+          </form>
 
 						</div>
 					</section>
