--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 				
                   <div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c">
 					<div class="gallery-single fix">
-						<img src="uploads/ipf-online.png" class="img-fluid" alt="Construction World (Android App)">
+						<img src="https://play.google.com/store/apps/details?id=com.asappinfoglobal.constructionworld&pcampaignid=web_sharef" class="img-fluid" alt="Construction World (Android App)">
 						<div class="img-overlay">
 							<a href="uploads/construction_world_app.gif" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
