--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="Welcome to Akshay Sarve’s portfolio – Software Test Engineer, Automation QA, Explore my projects, skills, and expertise in software testing">
     <meta name="author" content="Akshay Sarve">
+    <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="wVLcpNES6XdFnApZjUw54gwEZFxlR-9MCY5lmvLgCzk" />
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
