--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <meta name="author" content="Akshay Sarve">
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="wVLcpNES6XdFnApZjUw54gwEZFxlR-9MCY5lmvLgCzk" />
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GMS3P1H1FX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GMS3P1H1FX');
+</script>
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
